<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_blue">


    <Button
        android:id="@+id/button_postdialog_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/main_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edittext_postdialog_description"
        app:layout_constraintStart_toStartOf="@+id/edittext_postdialog_description" />

    <EditText
        android:id="@+id/edittext_postdialog_description"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/dialog_description"
        android:inputType="textMultiLine"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_postdialog_post"
        app:layout_constraintEnd_toEndOf="@+id/edittext_dialog_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edittext_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/edittext_dialog_title"
        app:layout_constraintVertical_bias="0.324" />

    <ImageView
        android:id="@+id/imageview_postdialog_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/dialog_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageview_postdialog_image"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="@+id/imageview_postdialog_image"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="228dp" />
</androidx.constraintlayout.widget.ConstraintLayout>