<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_profile_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_blue"
    tools:context=".ui.profile.ProfileActivity">

    <TextView
        android:id="@+id/textview_profilehistory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:text="@string/profile_history"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_profile_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/profile_history"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/textview_profile_createdon"
        app:layout_constraintStart_toStartOf="@+id/textview_profile_createdon"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_createdon" />

    <Button
        android:id="@+id/button_profile_automats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/profile_automats"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_profile_history"
        app:layout_constraintStart_toStartOf="@+id/button_profile_history"
        app:layout_constraintTop_toBottomOf="@+id/button_profile_history" />

    <ImageButton
        android:id="@+id/imagebutton_profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_profile_left"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textview_profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="TextView"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_profile_usernametitle"
        app:layout_constraintStart_toStartOf="@+id/textview_profile_usernametitle"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_usernametitle" />

    <TextView
        android:id="@+id/textview_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="TextView"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_profile_emailtitle"
        app:layout_constraintStart_toStartOf="@+id/textview_profile_emailtitle"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_emailtitle" />

    <TextView
        android:id="@+id/textview_profile_createdon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="TextView"
        android:gravity="center"
        android:textColor="@color/black"
        android:textDirection="ltr"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_profile_datetitle"
        app:layout_constraintStart_toStartOf="@+id/textview_profile_datetitle"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_datetitle" />

    <TextView
        android:id="@+id/textview_profile_usernametitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/profile_username"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_profile_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_profile_left"
        app:layout_constraintTop_toBottomOf="@+id/cardview_profile_wrapper"
        />

    <TextView
        android:id="@+id/textview_profile_emailtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/profile_email"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_profile_username"
        app:layout_constraintStart_toStartOf="@+id/textview_profile_username"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_username" />

    <TextView
        android:id="@+id/textview_profile_datetitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/profile_date"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textview_profile_email"
        app:layout_constraintStart_toStartOf="@+id/textview_profile_email"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_email" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_profile_wrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_profile_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton_profile_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_profile_avatar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/defaultprofilepicture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_profile_title" />

            <ImageButton
                android:id="@+id/imagebutton_profile_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagebutton_profile_camera"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageButton
                android:id="@+id/imagebutton_profile_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/textview_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/carter_one"
                android:text="@string/profile_title"
                android:textColor="@color/blue"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_profile_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="309dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_profile_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_profile_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_profile_posthistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="395dp" />

</androidx.constraintlayout.widget.ConstraintLayout>